feat: Enhance tool permissions and logging; add new components for Day 9

--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -18,6 +18,7 @@
     "lint": "echo \"(optional)\""
   },
   "dependencies": {
+    "@copilot/shared": "workspace:*",
     "@langchain/core": "^0.3.0",
     "@langchain/openai": "^0.3.0",
     "zod": "^4.2.1"
