--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@copilot/shared": "workspace:*",
-    "@langchain/core": "^0.3.0",
-    "@langchain/openai": "^0.3.0",
+    "@langchain/core": "1.1.8",
+    "@langchain/community": "1.1.1",
+    "@langchain/openai": "1.2.0",
+    "@lancedb/lancedb": "0.23.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
