--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -12,8 +12,9 @@
     }
   },
   "scripts": {
-    "dev": "tsup src/index.ts --watch --dts --format esm",
-    "build": "tsup src/index.ts --dts --format esm",
+    "dev": "pnpm run copy-docs && tsup src/index.ts --watch --dts --format esm",
+    "build": "tsup src/index.ts --dts --format esm && pnpm run copy-docs",
+    "copy-docs": "node ./scripts/copy-docs.mjs",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "echo \"(optional)\""
   },
@@ -22,7 +23,7 @@
     "@langchain/core": "1.1.8",
     "@langchain/community": "1.1.1",
     "@langchain/openai": "1.2.0",
-    "@lancedb/lancedb": "0.23.0",
+    "faiss-node": "^0.5.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
